New version makes project ESP-IDF Compatible

--- a/library.properties
+++ b/library.properties
@@ -1,6 +1,6 @@
 name=ESPNexUpload
-version=0.5.6
-author=Ville Vilpas <psoden@gmail.com>
+version=0.6.0
+author=Machiel Mastenbroek <machiel.mastenbroek@gmail.com>
 maintainer=Ville Vilpas <psoden@gmail.com>
 sentence=Upload UI file to Nextion displays using ESP's
 paragraph=Part of original ITEAD Nextion library modified to be used with ESP8266 & ESP32
